--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ h1 {
 
 }
 
+#connecte {
+    color:rgb(255, 153, 0);
+    text-shadow:0px 0px 8px rgb(255, 153, 0);
+}
+
 h2 {
     font-style:italic;
     text-shadow: 1px 1px 1px white;
