--- a/style.css
+++ b/style.css
@@ -107,14 +107,17 @@ img{
     border-color:black;
     border-radius:4px;
     border-width:1px;
-    max-height:350px;
-    max-width:350px;
+   /*max-height:350px;
+    max-width:350px;*/
     min-height:75px;
     min-width:75px;
     box-shadow: black 2px 2px 20px;
     
 }
 
+.img-responsive{
+    max-width:140%;
+}
 
 nav {
     font-family:Georgia;
