--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2042,7 +2042,7 @@ pre code {
     margin-left: 41.66666667%;
   }
   .col-lg-offset-4 {
-    margin-left: 33.33333333%;
+    margin-left: 25%;
   }
   .col-lg-offset-3 {
     margin-left: 25%;
