--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2042,7 +2042,7 @@ pre code {
     margin-left: 41.66666667%;
   }
   .col-lg-offset-4 {
-    margin-left: 25%;
+    margin-left: 33.33333333%;
   }
   .col-lg-offset-3 {
     margin-left: 25%;
@@ -3824,7 +3824,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (max-width: 480px) and (orientation: landscape) {
   .navbar-fixed-top .navbar-collapse,
   .navbar-fixed-bottom .navbar-collapse {
-    max-height: 800px;
+    max-height: 200px;
   }
 }
 .container > .navbar-header,
