--- a/style.css
+++ b/style.css
@@ -72,6 +72,18 @@ h2 {
     margin-left:10px;
 }
 
+#descHead {
+    font-weight:bolder;
+    text-decoration:underline;
+    font-size:20px;
+}
+
+.descCorp {
+    font-weight:bolder;
+    font-size:14px;
+    
+}
+
 #lastProd {
     font-style:italic;
     font-weight:bolder;
