--- a/style.css
+++ b/style.css
@@ -76,11 +76,13 @@ h2 {
     font-weight:bolder;
     text-decoration:underline;
     font-size:20px;
+    text-shadow:0px 0px 1px rgba(0, 0, 0, 0.5);
 }
 
 .descCorp {
     font-weight:bolder;
     font-size:14px;
+    text-shadow:0px 0px 1px rgba(0, 0, 0, 0.5);
     
 }
 
@@ -89,6 +91,7 @@ h2 {
     font-weight:bolder;
     font-size:18px;
     text-decoration:underline;
+    text-shadow:0px 0px 1px rgba(0, 0, 0, 0.5);
 }
 
 body {
