--- a/style.css
+++ b/style.css
@@ -186,7 +186,6 @@ h3 {
 }
 
 
-
 hr{
     margin-bottom:30px;
     font-family:Arial;
@@ -195,5 +194,17 @@ hr{
 
 }
 
+
+@media handheld {
+#descHead {
+    font-weight:bolder;
+    text-decoration:underline;
+    font-size:35px;
+    text-shadow:0px 0px 1px rgba(0, 0, 0, 0.5);
+}
+
+
+
+}
 
 
